[project]
name = "kvm"
version = "0.0.3"
authors = [
  { name="Juan Fox"},
]
description = "KVM is a client to manage kubectl versions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["kvm"]

[project.urls]
"Homepage" = "https://github.com/juannfox/kvm"

# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F"]