[project]
name = "kvm"
version = "0.0.5"
authors = [
  { name="Juan Fox"},
]
description = "KVM is a client to manage kubectl versions."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.5",
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
    "pyinstaller==6.12.0",
    "pyright==1.1.384",
    "pytest==8.3.3",
    "pytest-cov==6.1.0",
    "ruff==0.9.9",
]

[tool.setuptools]
packages = ["kvm"]

[project.urls]
"Homepage" = "https://github.com/juannfox/kvm"

# https://docs.astral.sh/ruff/configuration/

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
